# DJDXPEAK

./: .gitignore  Package.resolved  Package.swift  README.md  SWIFT_DEVTOOL_PLAN.md  bundle.sh
Scripts/: bundle.sh
Sources/DJDXStudio/: App.swift
Sources/DJDXStudio/Model/: AppModel.swift  Box.swift  LabelStore.swift  ProjectPaths.swift  Schema.swift  Workspace.swift
Sources/DJDXStudio/Render/: CropExport.swift  PreviewExport.swift
Sources/DJDXStudio/Support/: ClassColor.swift  PythonTool.swift  SelfTest.swift
Training/: README.md  pyproject.toml  schema.yaml
Training/labels/: _djdelta_proposals.json  _djnow_grid.json  _djnow_proposals.json  _djnow_workflow.json  _results_eval_subset.json  digit_labels.json  djlevel_labels.json  labels.json
Training/scripts/: _common.py  auto_label.py  autofix.py  dab  digit_autobox.py  draw_labels.py  export_coreml.py  inference_test.py  labeler.py  predict.py  prepare_dataset.py  prepare_djlevel_dataset.py  promote_coreml.py  train_detector.py  train_rank_classifier.py
Training/scripts/utilities/: _arch_sweep.py  _delta_wf.js  _ocr.py  auto_label.py  autofix.py  dab  digit_autobox.py  djlevel_now_relabel.py  draw_labels.py  eval_detector.py  inference_test.py  labeler.py  ocr_helper.swift  relabel_eval_loop.py
studio/: Package.swift  README.md
studio/Resources/: Info.plist
studio/scripts/: bundle.sh
training/: .gitignore  schema.yaml  setup.sh
training/labels/: _eval_subset.json  auto_seed.json  exclude.json  labels.json
training/scripts/: _common.py  _ocr.py  draw_labels.py  export_coreml.py  predict.py  prepare_dataset.py  train_detector.py  train_rank_classifier.py
(+30 files in other folders)
